# autolua2

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/autolua/autolua2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/autolua/autolua2/: IInputMethodService.aidl  IMainService.aidl
app/src/main/assets/ui/: sub_init.lua
app/src/main/assets/ui/main/: package.json
app/src/main/assets/ui/main/dev/: other.lua
app/src/main/assets/ui/main/src/: dkjson.lua  init.lua  inputEvent.lua  test.lua
app/src/main/assets/ui/main/ui/: init.lua  main.lua  test.lua  view.lua
app/src/main/assets/ui/main/ui/pages/: account.lua  debug.lua  main.lua
app/src/main/java/com/autolua/autolua2/: MainApp.kt  MainService.kt
app/src/main/java/com/autolua/autolua2/activity/: DebugActivity.kt  MainActivity.kt  PreferencesHelper.kt  ProjectActivity.kt  SplashActivity.kt
app/src/main/java/com/autolua/autolua2/base/: Configure.kt  Constants.kt  DataCallbackManager.java  DataChannel.kt  Path.kt
app/src/main/java/com/autolua/autolua2/debug/: BroadcastLocationServer.kt  DebugServer.kt  DebugServerImp.kt  DebugService.kt  DebugServiceImp.kt
app/src/main/java/com/autolua/autolua2/engine/: AutoLuaEngineService.kt  AutoLuaEngineServiceImp.kt
app/src/main/java/com/autolua/autolua2/extension/: FloatView.kt  UserInterface.kt
app/src/main/java/com/autolua/autolua2/extension/imp/: FloatViewImp.kt  UserInterfaceImp.kt
app/src/main/java/com/autolua/autolua2/mln/: ActivityLifecycleMonitor.java  AutoLuaEngineResultCode.java  AutoLuaEngineState.java  GlobalStateListener.java
app/src/main/java/com/autolua/autolua2/mln/provider/: GlideConfiguration.java  GlideImageProvider.java  ResourcesUtils.java
app/src/main/java/com/autolua/autolua2/project/: ProjectInfo.kt  ProjectManager.kt  ProjectManagerImp.kt
app/src/main/java/com/autolua/autolua2/view/: FloatController.kt
app/src/main/proto/: RequestResource.proto
app/src/main/res/color/: nav_item_color_state.xml
app/src/main/res/drawable/: add.xml  button_selector.xml  debug.xml  delete_script.xml  script_run.xml  stop_engine.xml  table_row_border.xml
app/src/main/res/layout/: activity_main.xml  activity_project.xml  activity_splash.xml  fragment_debug.xml  fragment_my.xml  fragment_script.xml  item_script.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/autolua/autolua2/: ExampleUnitTest.kt
docs/hint/: _global.lua  alv.lua
docs/hint/_input/: _Input.lua  _KeyCode.lua
docs/hint/_ui/: _FloatView.lua  _UI.lua
docs/hint/_vision/: _Bitmap.lua  _FindDirection.lua  _Screen.lua
engine/: build.gradle.kts
engine/src/androidTest/java/com/autolua/engine/: AutoLuaEngineTest.kt  ExampleInstrumentedTest.kt  LuaContextTest.kt  TestParcel.kt
engine/src/main/: AndroidManifest.xml
engine/src/main/cpp/: CMakeLists.txt  LuaEnvironmentSetup.h  engine.cpp  engine.h
engine/src/main/cpp/base/: lua.hpp  lua_context.cpp  lua_context.h  mlua.h  my_log.c  my_log.h  util.cpp  util.h
engine/src/main/cpp/core/: ALEState.h  LuaInterpreter.cc  LuaInterpreter.h
engine/src/main/cpp/extension/: CMakeLists.txt  Display.cpp  Display.h  Input.cpp  Input.h  InputControl.cpp  InputControl.h  InputManager.cpp  InputManager.h  JavaInputManager.cpp  JavaInputManager.h  NativeInputManager.cpp  NativeInputManager.h  NormalRandomNumber.h
engine/src/main/cpp/remote/: CMakeLists.txt  CommonService.cpp  CommonService.h  DebugService.cpp  DebugService.h  FatherService.cpp  FatherService.h  JsonRPCParser.cpp  JsonRPCParser.h  RPCParser.h  RemoteServerInfo.h  RemoteService.cpp  RemoteService.h  ServiceManager.cpp  ServiceManager.h  lua2json.cpp  lua2json.h
engine/src/main/cpp/remote/composite/: CodeProviderComposite.cpp  CodeProviderComposite.h  ObserverComposite.cpp  ObserverComposite.h  ResourceProviderComposite.cpp  ResourceProviderComposite.h
engine/src/main/java/android/app/: IServiceConnection.java
engine/src/main/java/android/os/: ServiceManager.java
engine/src/main/java/com/autolua/engine/base/: CommonLuaObjectAdapter.kt  JavaObjectWrapper.kt  KotlinFunctionWrapper.kt  LuaContext.kt  LuaContextImplement.kt  LuaError.kt  LuaObjectAdapter.kt  LuaTypeError.kt  MethodCache.kt  ObjectCache.kt  ObjectCacheImp.kt  Releasable.kt
engine/src/main/java/com/autolua/engine/common/: Listenable.kt  Observable.kt  ObservableImp.kt  ObservableImpOnMainThread.kt  Observer.kt  Utils.kt
engine/src/main/java/com/autolua/engine/conceal/: ActivityManagerNative.java  IWindowManager.java  InputManagerWrap.java  SurfaceControlWrap.java
engine/src/main/java/com/autolua/engine/core/: AutoLuaEngine.kt  AutoLuaEngineOnLocal.kt  AutoLuaEngineProxy.kt  Utils.kt
engine/src/main/proto/: Authorization.proto  interaction.proto
engine/src/test/java/com/autolua/engine/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+38 files in other folders)
